--- a/CC7/AssessmentCc7/AssessmentCc7/HTML2.html
+++ b/CC7/AssessmentCc7/AssessmentCc7/HTML2.html
@@ -6,7 +6,7 @@
     <title>Dangers of DHMO</title>
 </head>
 <body>
-    2. Mark the first line with the tags for the biggest heading.<br />
+    <!--2. Mark the first line with the tags for the biggest heading.<br />
 
     <h1>Dihydrogen Monoxide Dihydrogen monoxide, also known as hydroxyl acid or DHMO1</h1><br />
 
@@ -43,10 +43,10 @@
     produce remains contaminated by this chemical. 1The more common chemical formula is H2O. 2Source: Coalition to Ban Dihydrogen Monoxide.<br />
 
     <br />
-    <br />
+    <br />-->
     <!--2nd Question-->
 
-    <ol>
+    <!--<ol>
         <li>
             Groceries
             <ul>
@@ -71,7 +71,7 @@
                 <li>Fan</li>
             </ul>
         </li>
-    </ol>
+    </ol>-->
     <!--3rd Question-->
     <table border="2">
         <tr>
@@ -85,19 +85,19 @@
             <td>Computer Science 1</td>
         </tr>
         <tr>
-            <td>Computer Science 2</td>
+            <td>Artificial</td>
         </tr>
         <tr>
-            <td>Math</td>
-            <td>Calculus 1</td>
+            <td>Maths</td>
+            <td>Algorithms</td>
         </tr>
         <tr>
             <td>History</td>
-            <td>World History</td>
+            <td>Political History</td>
         </tr>
         <tr>
-            <td>Biology</td>
-            <td>Anatomy</td>
+            <td>Science</td>
+            <td>Environment</td>
         </tr>
     </table>
 </body>
