--- a/CC7/AssessmentCc7/AssessmentCc7/HTML2.html
+++ b/CC7/AssessmentCc7/AssessmentCc7/HTML2.html
@@ -6,13 +6,13 @@
     <title>Dangers of DHMO</title>
 </head>
 <body>
-    <!--2. Mark the first line with the tags for the biggest heading.<br />
+    2. Mark the first line with the tags for the biggest heading.<br />
 
     <h1>Dihydrogen Monoxide Dihydrogen monoxide, also known as hydroxyl acid or DHMO1</h1><br />
 
     3. Give the next two words a strong (bold) appearance.<br />
 
-    <strong>is a</strong><br />
+    <strong>Dangerous Substance</strong><br />
 
     4. Emphasize (italicize) the first occurrence of hydroxyl acid and DHMO <br />
 
@@ -24,7 +24,7 @@
 
     6. Mark the letters TM behind Styrofoam as superscript.<br />
 
-    TM <mark><sup>Styrofoam </sup></mark><br />
+     <mark>TM</mark> <sup>Styrofoam </sup><br />
 
     7. The 2 in H2O should be subscripted.<br />
 
@@ -43,10 +43,10 @@
     produce remains contaminated by this chemical. 1The more common chemical formula is H2O. 2Source: Coalition to Ban Dihydrogen Monoxide.<br />
 
     <br />
-    <br />-->
-    <!--2nd Question-->
+    <br />
+    2nd Question
 
-    <!--<ol>
+    <ol>
         <li>
             Groceries
             <ul>
@@ -71,7 +71,7 @@
                 <li>Fan</li>
             </ul>
         </li>
-    </ol>-->
+    </ol>
     <!--3rd Question-->
     <table border="2">
         <tr>
